se agregó contenido en el head

--- a/Primera Pagina.html
+++ b/Primera Pagina.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Mi primera página web">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Diego Vega">
     <title>Primera Página</title>
 </head>
 <body>
-    <h1>
-        Este es un encabezado
-    </h1>
-    <p>
-        Este es un párrafo.
-    </p>
+    <h1>Este es un encabezado</h1>
+    <p>Este es un párrafo.</p>
 </body>
 </html>
