--- a/Primera Pagina.html
+++ b/Primera Pagina.html
@@ -10,7 +10,14 @@
     <title>Primera Página</title>
 </head>
 <body>
-    <h1>Este es un encabezado</h1>
-    <p>Este es un párrafo.</p>
+    <h1>Harry Potter</h1>
+    <h2>Sinopsis</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ducimus, voluptatum non sint odio quos deserunt ex pariatur iusto ipsum! Ex officia non vitae optio fugit corporis architecto odit similique.</p>
+    <h2>Novelas</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum culpa praesentium odio natus inventore totam ipsum, doloribus laboriosam, iusto delectus, exercitationem nostrum commodi quisquam. Sequi odit quo velit fugit quisquam?</p>
+    <h3>Harry Potter y la Piedra Filosofal</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta cupiditate perspiciatis at totam amet praesentium commodi quis delectus nulla, aut aperiam, vel dolorem recusandae perferendis qui explicabo. Deserunt, nihil quia?</p>
+    <h4>Personajes</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos ea soluta dolores repellendus et aspernatur harum non perferendis minima! Nobis quidem perferendis accusantium aspernatur ipsum magnam temporibus nesciunt quibusdam quas?</p>
 </body>
 </html>
