Cambio nombre del index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     background-color: steelblue;
 }
     </style> -->
-    <title>Document</title>
+    <title>Document1</title>
 </head>
 
 <body>
