--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde suscipit doloremque eveniet enim hic cum placeat
         officia tempora delectus. Voluptate nam minus facilis tempora magnam voluptates perspiciatis labore temporibus
         dolore.</p>
-        <a href="www.hola.co">Enlade de entrada</a>
-        <p lang="en">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt iste dicta minima quam doloribus delectus neque aliquam porro! Iure enim possimus atque ipsam nesciunt ratione voluptatibus obcaecati consequatur totam provident.</p>
+    <a href="www.hola.co">Enlade de entrada</a>
+    <p lang="en">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt iste dicta minima quam doloribus
+        delectus neque aliquam porro! Iure enim possimus atque ipsam nesciunt ratione voluptatibus obcaecati consequatur
+        totam provident.</p>
+        
+        
 </body>
 
 </html>
